# nno0obb-api

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  main.py  pyproject.toml  requirements.txt  worker.ts  wrangler.toml
app/: main.py
app/routers/v1/: etc.py  root.py
